<?xml version="1.0" encoding="utf-8"?>
<com.deepalhome.launcher.view.DisallowInterceptView android:tag="layout/add_widget_dialog_0" android:background="@drawable/add_widget_dialog_bg" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
        <RadioGroup android:id="@id/radioGroup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginEnd="24.0dip">
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/allBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_all" android:drawablePadding="16.0dip" />
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/timeBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_time" android:drawablePadding="16.0dip" />
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/weatherBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_weather" android:drawablePadding="16.0dip" />
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/timeWeatherBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_time_weather" android:drawablePadding="16.0dip" />
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/miTempBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_mi_temp" android:drawablePadding="16.0dip" />
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/vehicleBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_vehicle" android:drawablePadding="16.0dip" />
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/recentAppsBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_recent_apps" android:drawablePadding="16.0dip" />
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/wallpaperBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_wallpaper" android:drawablePadding="16.0dip" />
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/modeBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_mode" android:drawablePadding="16.0dip" />
            <RadioButton android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/magiskBtn" android:background="@drawable/add_widget_dialog_radio_btn_bg" android:padding="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="64.0dip" android:layout_marginBottom="8.0dip" android:button="@null" android:text="@string/widget_filter_magisk" android:drawablePadding="16.0dip" />
        </RadioGroup>
    </androidx.core.widget.NestedScrollView>
    <View android:background="#88000000" android:layout_width="1.0dip" android:layout_height="fill_parent" />
    <androidx.core.widget.NestedScrollView android:id="@id/widgetsContainer" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0" android:layout_marginStart="24.0dip" />
</com.deepalhome.launcher.view.DisallowInterceptView>
