<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:tag="layout/connection_dialog_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:gravity="center" android:id="@id/portEt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/connection_port_hint" android:ems="5" android:inputType="number" />
        <Button android:id="@id/devBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/enable_developer_mode" android:layout_marginStart="32.0dip" app:backgroundTint="@color/accent" app:cornerRadius="32.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
        <Button android:id="@id/helpBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help" app:backgroundTint="@color/accent" app:cornerRadius="32.0dip" />
        <Button android:id="@id/noWirelessAdbBtn" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/adb_no_wireless" android:layout_marginStart="16.0dip" app:backgroundTint="@color/accent" app:cornerRadius="32.0dip" />
    </LinearLayout>
</LinearLayout>
