<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/image_widget_picker_dialog_0" android:background="@drawable/add_widget_dialog_bg" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="24.0sp" android:textStyle="bold" android:textColor="@color/text_light_day" android:id="@id/titleTv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/image_widget_picker_title" android:layout_weight="1.0" />
        <com.google.android.material.button.MaterialButton android:textSize="16.0sp" android:id="@id/localImageBtn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/image_widget_picker_local" style="@style/Widget.Material3.Button.TonalButton" />
    </LinearLayout>
    <TextView android:textSize="16.0sp" android:textColor="@color/text_hint_day" android:id="@id/subtitleTv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/image_widget_picker_subtitle" />
    <TextView android:textSize="18.0sp" android:textColor="@color/text_hint_day" android:gravity="center" android:id="@id/emptyView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/image_widget_picker_empty" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/wallpaperRecyclerView" android:paddingBottom="8.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="420.0dip" android:layout_marginTop="20.0dip" />
</LinearLayout>
