<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="end" android:orientation="vertical" android:tag="layout/weather_widget_view_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingHorizontal="24.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="76.0sp" android:textColor="#ffffffff" android:id="@id/temperatureTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weather_temp_placeholder" android:fontFamily="sans-serif-thin" app:layout_constraintEnd_toStartOf="@id/textView2" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="28.0sp" android:textColor="#ffffffff" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/temperature_celsius_symbol" android:fontFamily="sans-serif-thin" app:layout_constraintBaseline_toBaselineOf="@id/temperatureTv" app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-32.0dip">
        <TextView android:textSize="28.0sp" android:textColor="#ffffffff" android:id="@id/cityTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weather_city_placeholder" android:fontFamily="@font/chinese_thin" app:layout_constraintEnd_toStartOf="@id/weatherTv" app:layout_constraintTop_toBottomOf="@id/temperatureTv" />
        <TextView android:textSize="28.0sp" android:textColor="#ffffffff" android:id="@id/weatherTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/weather_condition_sunny" android:fontFamily="@font/chinese_thin" android:layout_marginStart="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/temperatureTv" />
    </LinearLayout>
</LinearLayout>
