<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@id/dialogRootCard" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardCornerRadius="28.0dip" app:cardElevation="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:padding="28.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:layout_gravity="center_horizontal" android:id="@id/dialogTitleTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/custom_voice_input_title" />
        <EditText android:textSize="17.0sp" android:gravity="start|center" android:id="@id/customVoiceInputEt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:minHeight="52.0dip" android:hint="@string/custom_voice_input_hint" android:maxLines="3" android:inputType="text" android:imeOptions="actionDone" android:paddingHorizontal="16.0dip" android:paddingVertical="14.0dip" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip">
            <Button android:textSize="17.0sp" android:id="@id/cancelBtn" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/dialog_cancel" android:paddingStart="24.0dip" android:paddingEnd="24.0dip" app:backgroundTint="@color/gray" app:cornerRadius="32.0dip" style="@style/Widget.App.Button.White" />
            <Button android:textSize="17.0sp" android:id="@id/confirmBtn" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/dialog_confirm" android:paddingStart="24.0dip" android:paddingEnd="24.0dip" android:layout_marginStart="20.0dip" app:backgroundTint="@color/accent" app:cornerRadius="32.0dip" style="@style/Widget.App.Button.White" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
