<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/donate_dialog_view_0" android:paddingBottom="32.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/descriptionTv" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.6" android:layout_marginStart="8.0dip">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip">
                <View android:id="@id/headerAccentBar" android:layout_width="4.0dip" android:layout_height="24.0dip" android:layout_marginEnd="12.0dip" />
                <TextView android:textSize="22.0sp" android:textStyle="bold" android:id="@id/donorHeaderTv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/donate_donors_header" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/donorTableHeaders" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="18.0dip">
                <TextView android:textSize="14.0sp" android:id="@id/headerName" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/donate_header_name" android:layout_weight="3.0" />
                <TextView android:textSize="14.0sp" android:gravity="center" android:id="@id/headerAmount" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/donate_header_amount" android:layout_weight="2.5" />
                <TextView android:textSize="14.0sp" android:gravity="center" android:id="@id/headerChannel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/donate_header_channel" android:layout_weight="2.0" />
                <TextView android:textSize="14.0sp" android:gravity="end" android:id="@id/headerTime" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/donate_header_time" android:layout_weight="4.5" />
            </LinearLayout>
            <FrameLayout android:id="@id/donorListFrame" android:background="@drawable/energy_mode_item_unselected" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ScrollView android:scrollbarStyle="outsideOverlay" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fadeScrollbars="false">
                    <LinearLayout android:orientation="vertical" android:id="@id/donorListContainer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="16.0dip" android:paddingVertical="8.0dip">
                        <TextView android:textSize="20.0sp" android:gravity="center" android:id="@id/donorLoadingTv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donate_loading" android:paddingVertical="40.0dip" />
                    </LinearLayout>
                </ScrollView>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" android:layout_marginStart="16.0dip">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:gravity="center" android:id="@id/scanToSupportTv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/donate_scan_to_support" />
            <ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fadeScrollbars="false">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/qrCodeContainer" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:gravity="center" android:id="@id/qrLoadingTv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/donate_loading" android:paddingVertical="40.0dip" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
